# EAA

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements_aps_mic.txt
.github/workflows/: docs.yml  publish-pypi.yml  python-app.yml
developer_tools/create_eaa_compatible_mcp_servers/: SKILL.md
developer_tools/create_eaa_compatible_mcp_servers/configs/: example.yaml
developer_tools/create_eaa_compatible_mcp_servers/example_tool_server_repo/: README.md  pyproject.toml
developer_tools/create_eaa_compatible_mcp_servers/example_tool_server_repo/configs/: simulated_parameter_tuning.yaml
developer_tools/create_eaa_compatible_mcp_servers/example_tool_server_repo/src/control_suite_mcp_dummy/: __init__.py  config.py  launcher.py  mcp_server.py  protocol.py  simulated_acquisition.py  worker.py  zmq_client.py
docs/: Makefile  conf.py  creating-async-safe-mcp-servers.md  creating-async-safe-mcp-servers.rst  creating-mcp-servers.md  guide.md  guide.rst  index.md  index.rst  installation.md  installation.rst  introduction.md  introduction.rst  llm-config.md  llm-config.rst  make.bat  mcp_server_guide.md  memory.md  memory.rst  quick-start.md  skills.md  skills.rst  task-manager.md  task-manager.rst  tools.md  tools.rst  webui.md  webui.rst
examples/: chat.py  mcp_calculator_server.py  roi_search.py
examples/webui/: start_webui.py
examples/webui/.chainlit/: config.toml
examples/webui/public/: autoscroll.js
src/eaa/: cli.py  comms.py  hooks.py  image_proc.py  maps.py  maths.py  matplotlib_setup.py  message_parsing.py  message_proc.py  util.py
src/eaa/agents/: argo.py  asksage.py  base.py  openai.py
src/eaa/api/: llm_config.py  memory.py
src/eaa/core/: message_proc.py  skill.py  util.py
src/eaa/gui/: chat.py
src/eaa/mcp/: __init__.py  server.py
src/eaa/task_managers/: base.py  factory.py
src/eaa/tool/: bo.py  coding.py  example_calculator.py  optimization.py  (+1 more)
tests/: conftest.py  test_analytical_feature_tracking.py  test_analytical_focusing.py  test_asksage_api.py  test_base_task_manager.py  test_bo.py  test_coding_tool.py  test_error_minimization_registration.py  test_feature_tracking_task_managers.py  test_http_client.py  test_image_registration_tool.py  test_llm_model.py  test_mcp.py  test_mcp_server.py  test_mcp_tool_adapters.py  test_memory_manager.py  test_message_proc.py  test_monitoring_task_manager.py  test_oai_api.py  test_postgres_vector_store.py  test_purge_image_messages.py  test_quadratic_tool.py  test_regression_tool.py  test_simulated_image_acquisition.py  test_simulated_parameter_tuning.py  test_task_manager_commands.py  test_task_manager_register_tools.py  test_task_manager_skills.py  test_tool_manager.py  test_utils.py  test_webui_chat.py  test_workspace_tools.py  test_xanes_adaptive_sampling.py
(+77 files in other folders)
