[project]
name = "eaa-workspace"
version = "0.0.0"
description = "Workspace root for local development of EAA packages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "eaa-core",
    "eaa-imaging",
    "pytest",
    "ruff",
]

[tool.uv]
package = false

[tool.uv.sources]
eaa-core = { workspace = true }
eaa-imaging = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/eaa-core",
    "packages/eaa-imaging",
]
