[project]
name = "eaa-workspace"
version = "0.0.0"
description = "Workspace root for local development of EAA packages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "eaa-core",
    "eaa-imaging",
    "eaa-spectroscopy",
    "pytest",
    "ruff",
]

[project.optional-dependencies]
bo = [
    "eaa-core[bo]",
    "eaa-imaging[bo]",
    "eaa-spectroscopy[bo]",
]
memory_chroma = [
    "eaa-core[memory_chroma]",
]

[tool.uv]
package = false

[tool.uv.sources]
eaa-core = { workspace = true }
eaa-imaging = { workspace = true }
eaa-spectroscopy = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/eaa-core",
    "packages/eaa-imaging",
    "packages/eaa-spectroscopy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
